--- a/index.html
+++ b/index.html
@@ -1,199 +1,290 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Pastel Splash Dash DX</title>
-
+<meta charset="UTF-8">
+<title>Pastel Anime Dash</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <style>
 html, body {
   margin: 0;
   padding: 0;
-  background: #fff0f7;
-  font-family: "Comic Sans MS", system-ui;
+  background: #0f172a;
   overflow: hidden;
 }
-
-#game {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-  background:
-    radial-gradient(circle at 20% 30%, #ffffffaa 8%, transparent 9%),
-    radial-gradient(circle at 70% 60%, #ffffffaa 10%, transparent 11%),
-    linear-gradient(#ffd6e8, #cce7ff);
-  background-size: 140px 140px;
-  animation: bg 18s linear infinite;
+canvas {
+  display: block;
+  margin: auto;
+  image-rendering: pixelated;
+  touch-action: manipulation;
 }
-
-@keyframes bg {
-  from { background-position: 0 0; }
-  to { background-position: -500px 0; }
-}
-
-/* HUD */
-#hud {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  background: #ffffffcc;
-  border-radius: 14px;
-  padding: 8px 14px;
-  font-size: 16px;
-}
-
-/* Characters */
-.character {
-  position: absolute;
-  bottom: 24px;
-  font-size: 48px;
-  user-select: none;
-}
-
-#girl { left: 20px; cursor: pointer; }
-#man { right: 20px; }
-
-/* Water */
-.water {
-  position: absolute;
-  font-size: 24px;
-  animation: water 0.6s linear forwards;
-}
-@keyframes water {
-  from { transform: translate(0,0); opacity:1 }
-  to { transform: translate(220px,-120px); opacity:0 }
-}
-
-/* Guard */
-#guard {
-  position: absolute;
-  top: 50%;
-  right: -60px;
-  font-size: 42px;
-  animation: guard 6s linear infinite;
-}
-@keyframes guard {
-  0% { right: -60px; }
-  50% { right: 40%; }
-  100% { right: -60px; }
-}
-
-/* Camera */
-#camera {
-  position: absolute;
-  top: 80px;
-  left: 50%;
-  font-size: 32px;
-  animation: cam 4s ease-in-out infinite;
-}
-@keyframes cam {
-  0% { transform: translateX(-80px); }
-  50% { transform: translateX(80px); }
-  100% { transform: translateX(-80px); }
-}
-
-/* Game over */
-#over {
-  position: absolute;
-  inset: 0;
-  background: #fff0f7;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  font-size: 22px;
-}
-
-button {
-  margin-top: 12px;
-  font-size: 18px;
-  padding: 8px 22px;
-  border-radius: 16px;
-  border: none;
-  background: #ff9acb;
+#hint {
+  position: fixed;
+  bottom: 6px;
+  width: 100%;
+  text-align: center;
+  font-size: 12px;
+  color: #fff;
+  opacity: 0.7;
 }
 </style>
 </head>
-
 <body>
 
-<div id="game">
-  <div id="hud">💦 0 | 🔥 x1</div>
-
-  <div id="girl" class="character">👧🪣</div>
-  <div id="man" class="character">👔😴</div>
-  <div id="guard">👮</div>
-  <div id="camera">📷</div>
-
-  <div id="over">
-    <div>😳 Bị phát hiện!</div>
-    <div id="final"></div>
-    <button onclick="start()">Chơi lại</button>
-  </div>
-</div>
+<canvas id="game"></canvas>
+<div id="hint">Tap trái / phải để chạy & nhảy</div>
 
 <script>
-let score, combo, alertness, gameOver;
-const girl = document.getElementById("girl");
-const man = document.getElementById("man");
-const hud = document.getElementById("hud");
-const over = document.getElementById("over");
-const final = document.getElementById("final");
+/* =========================
+   CORE CONFIG
+========================= */
+const canvas = document.getElementById("game");
+const ctx = canvas.getContext("2d");
 
-/* sounds */
-const splashSound = new Audio("data:audio/wav;base64,UklGRigAAABXQVZFZm10IBAAAAABAAEAESsAACJWAAACABAAZGF0YQgAAAAA");
-const alertSound = new Audio("data:audio/wav;base64,UklGRigAAABXQVZFZm10IBAAAAABAAEAESsAACJWAAACABAAZGF0YQgAAAAA");
+const SCALE = 4;
+const W = 96;
+const H = 160;
 
-function start() {
-  score = 0;
-  combo = 1;
-  alertness = 0;
-  gameOver = false;
-  man.textContent = "👔😴";
-  hud.textContent = "💦 0 | 🔥 x1";
-  over.style.display = "none";
+canvas.width = W * SCALE;
+canvas.height = H * SCALE;
+ctx.scale(SCALE, SCALE);
+
+/* =========================
+   AUDIO (simple synth)
+========================= */
+const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+function beep(freq, dur=0.08) {
+  const o = audioCtx.createOscillator();
+  const g = audioCtx.createGain();
+  o.connect(g);
+  g.connect(audioCtx.destination);
+  o.frequency.value = freq;
+  o.type = "square";
+  g.gain.value = 0.05;
+  o.start();
+  setTimeout(() => o.stop(), dur * 1000);
 }
-start();
 
-/* Throw water */
-girl.onclick = () => {
-  if (gameOver) return;
-
-  splashSound.play();
-
-  const w = document.createElement("div");
-  w.className = "water";
-  w.textContent = "💦";
-  w.style.left = girl.offsetLeft + 40 + "px";
-  w.style.bottom = "80px";
-  game.appendChild(w);
-  setTimeout(() => w.remove(), 600);
-
-  score += combo;
-  combo = Math.min(combo + 1, 3);
-  alertness += 0.15;
-
-  hud.textContent = `💦 ${score} | 🔥 x${combo}`;
-
-  if (Math.random() < alertness * 0.15) lose();
+/* =========================
+   GAME STATE
+========================= */
+let player = {
+  x: 44,
+  y: 120,
+  vy: 0,
+  frame: 0,
+  onGround: true
 };
 
-/* Random checks */
-setInterval(() => {
-  if (gameOver) return;
-  if (Math.random() < alertness * 0.1) lose();
-}, 1200);
+let enemies = [];
+let boss = null;
 
-/* Lose */
-function lose() {
-  if (gameOver) return;
-  gameOver = true;
-  man.textContent = "👔😳";
-  alertSound.play();
-  final.textContent = `Điểm: ${score}`;
-  over.style.display = "flex";
+let score = 0;
+let hiScore = Number(localStorage.getItem("hiScore") || 0);
+let night = false;
+let tick = 0;
+
+/* =========================
+   SPAWN
+========================= */
+function spawnEnemy() {
+  enemies.push({
+    x: Math.random() > 0.5 ? -10 : 100,
+    y: 120,
+    dir: Math.random() > 0.5 ? 1 : -1
+  });
 }
-</script>
 
+function spawnBoss() {
+  boss = {
+    x: 30,
+    y: 90,
+    hp: 30,
+    dir: 1
+  };
+}
+
+/* =========================
+   BACKGROUND
+========================= */
+function drawBG() {
+  ctx.fillStyle = night ? "#1e293b" : "#fdeaf5";
+  ctx.fillRect(0, 0, W, H);
+
+  ctx.fillStyle = night ? "rgba(255,255,255,0.2)" : "rgba(255,255,255,0.7)";
+  for (let y = 0; y < H; y += 16) {
+    for (let x = 0; x < W; x += 16) {
+      ctx.beginPath();
+      ctx.arc((x + tick) % W, (y + tick) % H, 1.5, 0, Math.PI * 2);
+      ctx.fill();
+    }
+  }
+
+  ctx.fillStyle = night ? "#020617" : "#ffd6e8";
+  ctx.fillRect(0, 140, W, 20);
+}
+
+/* =========================
+   PLAYER SPRITE
+========================= */
+function drawPlayer(x, y) {
+  const f = Math.floor(player.frame) % 2;
+
+  // hair
+  ctx.fillStyle = "#5a2e1b";
+  ctx.fillRect(x+2, y, 10, 4);
+
+  // face
+  ctx.fillStyle = "#ffd7b3";
+  ctx.fillRect(x+3, y+4, 8, 6);
+
+  // eyes
+  ctx.fillStyle = "#000";
+  ctx.fillRect(x+5, y+7, 1, 1);
+  ctx.fillRect(x+8, y+7, 1, 1);
+
+  // dress
+  ctx.fillStyle = "#ffb6d9";
+  ctx.fillRect(x+2, y+10, 10, 8);
+
+  // legs (animation)
+  ctx.fillStyle = "#000";
+  ctx.fillRect(x+4 + f, y+18, 2, 4);
+  ctx.fillRect(x+8 - f, y+18, 2, 4);
+}
+
+/* =========================
+   ENEMY
+========================= */
+function drawEnemy(e) {
+  ctx.fillStyle = "#0f172a";
+  ctx.fillRect(e.x+2, e.y, 10, 6);
+
+  ctx.fillStyle = "#ffd7b3";
+  ctx.fillRect(e.x+3, e.y+6, 8, 6);
+
+  ctx.fillStyle = "#334155";
+  ctx.fillRect(e.x+2, e.y+12, 10, 8);
+}
+
+/* =========================
+   BOSS
+========================= */
+function drawBoss(b) {
+  ctx.fillStyle = "#7c2d12";
+  ctx.fillRect(b.x, b.y, 20, 20);
+
+  ctx.fillStyle = "#fde68a";
+  ctx.fillRect(b.x+4, b.y+6, 4, 4);
+  ctx.fillRect(b.x+12, b.y+6, 4, 4);
+
+  ctx.fillStyle = "#ef4444";
+  ctx.fillRect(b.x, b.y-4, (b.hp/30)*20, 2);
+}
+
+/* =========================
+   INPUT
+========================= */
+canvas.addEventListener("touchstart", e => {
+  audioCtx.resume();
+  const x = e.touches[0].clientX;
+
+  if (x < window.innerWidth / 2) player.x -= 6;
+  else player.x += 6;
+
+  if (player.onGround) {
+    player.vy = -6;
+    player.onGround = false;
+    beep(600);
+  }
+});
+
+/* =========================
+   UPDATE
+========================= */
+function update() {
+  tick++;
+
+  // gravity
+  player.vy += 0.3;
+  player.y += player.vy;
+
+  if (player.y >= 120) {
+    player.y = 120;
+    player.vy = 0;
+    player.onGround = true;
+  }
+
+  player.frame += 0.2;
+
+  // enemies
+  enemies.forEach(e => {
+    e.x += e.dir * 0.5;
+  });
+
+  enemies = enemies.filter(e => e.x > -20 && e.x < 120);
+
+  // collision enemy
+  enemies.forEach(e => {
+    if (Math.abs(player.x - e.x) < 10 && Math.abs(player.y - e.y) < 10) {
+      score = Math.max(0, score - 5);
+      beep(200);
+    }
+  });
+
+  // boss logic
+  if (boss) {
+    boss.x += boss.dir * 0.6;
+    if (boss.x < 10 || boss.x > 60) boss.dir *= -1;
+
+    if (Math.abs(player.x - boss.x) < 14 && Math.abs(player.y - boss.y) < 14) {
+      boss.hp--;
+      beep(120);
+      if (boss.hp <= 0) {
+        boss = null;
+        score += 100;
+        beep(900, 0.2);
+      }
+    }
+  }
+
+  // spawn
+  if (tick % 120 === 0) spawnEnemy();
+  if (score > 200 && !boss) spawnBoss();
+
+  // day / night
+  if (tick % 600 === 0) night = !night;
+
+  score++;
+  hiScore = Math.max(hiScore, score);
+  localStorage.setItem("hiScore", hiScore);
+}
+
+/* =========================
+   UI
+========================= */
+function drawUI() {
+  ctx.fillStyle = "#6b4c6b";
+  ctx.font = "6px monospace";
+  ctx.fillText("SCORE " + score, 4, 8);
+  ctx.fillText("BEST " + hiScore, 60, 8);
+
+  if (boss) ctx.fillText("BOSS!", 42, 20);
+}
+
+/* =========================
+   LOOP
+========================= */
+function loop() {
+  drawBG();
+  update();
+  enemies.forEach(drawEnemy);
+  if (boss) drawBoss(boss);
+  drawPlayer(player.x, player.y);
+  drawUI();
+  requestAnimationFrame(loop);
+}
+
+loop();
+</script>
 </body>
 </html>
